# CodingPractice

./: CMakeLists.txt  bitbucket-pipelines.yml
Array/: CMakeLists.txt  NextGreaterElement.cpp
DynamicProgramming/: CMakeLists.txt  LongestCommonSubsequence.cpp  SetPartition.cpp
Stack/: CMakeLists.txt  StackModification.cpp  StockSpan.cpp
